--- a/views/errors/not-authenticated.ejs
+++ b/views/errors/not-authenticated.ejs
@@ -1,14 +1,14 @@
 <% include ../partials/header %>
-<div class="container-fluid">
-    <div class="row">
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+<div class="container">
+    <div class="row justify-content-center">
+        <main role="main" class="px-2">
             <div class="alert alert-warning" role="alert">
                 <h4>
                     Kérlek az oldal használatához jelentkez be!
                 </h4>
             </div>
-            <form action="/auth/login" method="POST" class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
+            <form action="/auth/login" method="POST" class="form-inline">
+                <button class="btn-lg btn-success" type="submit">Bejelentkezés AuthSCH-val</button>
             </form>
         </main>
     </div>
