--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="/css/main.css" rel="stylesheet" type="text/css">
-    <title>SCH Szertár: Főoldal</title>
+    <title><%= (user && user.isAdmin && newRents) ? '('+newRents+') ' : '' %>SCH Szertár: Főoldal</title>
 </head>
 <body <% if(active[1] == 'about'){ %>style="padding: 0"<%}%>>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li class="nav-item <% if(active[1] === 'about'){ %> active <% } %>">
-                <a class="nav-link" href="/about">Rólunk</a>
+                <a class="nav-link" href="http://dsk.sch.bme.hu/kapcsolat.html">Rólunk</a>
             </li>
             <% if(user && user.isAdmin) { %>
             <li class="nav-item dropdown d-lg-none <% if(active[1] === 'admin'){ %> active <% } %>">
