Update Front-end, Add MongoDB based session store

--- a/views/pages/admin/items.ejs
+++ b/views/pages/admin/items.ejs
@@ -5,8 +5,8 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <% if(!items.length){ %>
             <div class="alert alert-danger" role="alert">
-                <h4>Egyetlen eszköz sem található!</h4>
-                <p>Kérlek alább add hozzá az eszközöket</p>
+                <h2 class="text-center">Egyetlen eszköz sem található!</h2>
+                <h5 class="text-center">Kérlek alább add hozzá az eszközöket</h5>
             </div>
             <% } %>
             <div class="col-md-8">
