--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -25,18 +25,18 @@ function getWeekRents(){
 <div class="container-fluid">
     <div class="row">
         <% include ../partials/sidebar %>
-        <main role="main" class="col-md-9 col-lg-8 ml-sm-auto mr-lg-auto px-3 px-sm-2">
+        <main role="main" class="col-md-9 mr-sm-5 ml-sm-auto pl-sm-3">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1>Irányítópult</h1>
+                <h1>Összegzés</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
-                    <label for="week">Hét: találat(<%= weekRents.rentsLen%>)</label>
+                    <label for="week">Hét: találat(<b><%= weekRents.rentsLen%></b>)</label>
                     <input id="week" type="week" class="form-control" value="<%= (weekRents.week) ? weekRents.week : new Date().getFullYear()+'-W'+moment().week() %>" onchange="loadWeek()">
                 </div>
             </div>
             <canvas class='my-4 w-100 chartjs-render-monitor' id="chart"></canvas>
             <% if(!weekRents.length) {%>
             <div class="alert alert-warning" role="alert">
-                <h4>Egyetlen kölcsönzés sem található!</h4>
+                <h4 class="text-center">Egyetlen kölcsönzés sem található!</h4>
             </div>
             <% }else{%>
             <h2>Kölcsönzések</h2>
