--- a/views/pages/admin/rents.ejs
+++ b/views/pages/admin/rents.ejs
@@ -59,10 +59,10 @@ function getStateConfirm(state){
     <div class="row">
         <% include ../../partials/sidebar %>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <% if( !rents.length || !items.length || rents.every((rent) => rent.state == 0) ){ %>
             <h2>Kölcsönzések</h2>
+            <% if( !rents.length || !items.length || rents.every((rent) => rent.state == 0) ){ %>
             <div class="alert alert-warning" role="alert">
-                <h4>Egyetlen kölcsönzés sem található!</h4>
+                <h4 class="text-center">Egyetlen kölcsönzés sem található!</h4>
             </div>
             <% } else { %>
             <div class="table-responsive">
@@ -123,7 +123,7 @@ function getStateConfirm(state){
             success: () => {
                 if($('table tbody').children().length == 1) location.reload()
                 else {
-                    if(state == 1){
+                    if(state == 1 || state == 4){
                         var tmp = ($('.newRents').html())-1
                         $('.newRents').text(parseInt((!tmp) ? '' : tmp))
                     }
