--- a/views/pages/admin/users.ejs
+++ b/views/pages/admin/users.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <% include ../../partials/sidebar %>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <main role="main" class="col-md-10 ml-sm-auto px-4">
             <h2>Felhasználók</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-striped">
