--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -32,12 +32,12 @@ function getState(state){
     }
 }
 %>
-<div class="container-fluid">
-    <div class="row">
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+<div class="container">
+    <div class="row justify-content-center">
+        <main role="main" class="col-md-10 px-2">
             <% if( !rents.length || rents.every((rent) => !rent.state) ){ %>
                 <div class="alert alert-warning" role="alert">
-                    <h4>Még nem kölcsönöztél eszközt</h4>
+                    <h4 class="text-center">Még nem kölcsönöztél eszközt</h4>
                 </div>
             <% } else { %>
             <h2>Kölcsönzések</h2>
