--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,29 +12,29 @@
 <body <% if(active[1] == 'about'){ %>style="padding: 0"<%}%>>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="/">SCH Szertár</a>
-        <ul class="nav d-lg-none">
+        <ul class="nav navbar-nav d-lg-none ml-auto mr-3" style="flex-direction: row">
             <% if(user && active[1] != 'admin') { %>
-            <li class="<% if(active[2] === 'cart'){ %> active <% } %>">
-                <a href="/user/cart">
+            <li class="nav-item <% if(active[2] === 'cart'){ %> active <% } %>">
+                <a class="nav-link" href="/user/cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="badge badge-warning inCart"><%= (!user.inCart) ? '' : user.inCart %></span>
                 </a>
             </li>
-            <li class="<% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
-                    <a href="/user/rents">
+            <li class="nav-item px-3 <% if(active[2] === 'rents' && active[1] == 'user'){ %>active<% } %>">
+                    <a class="nav-link" href="/user/rents">
                         <i class="fas fa-exchange-alt"></i>
                         <span class="badge badge-warning inRent"><%= (!user.inRent) ? '' : user.inRent %></span>
                     </a>
             </li>
-            <li>
-                <a href="/user/rents">
+            <li class="nav-item">
+                <a class="nav-link" href="#">
                     <i class="fas fa-bell"></i>
                     <span class="badge badge-success"></span>
                 </a>
             </li>
             <% }else if(user && user.isAdmin){ %>
-            <li>
-                <a href="/admin/rents">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/rents">
                     <i class="fas fa-bell"></i>
                     <span class="badge badge-success newRents"><%= (newRents) ? newRents : '' %></span>
                 </a>
@@ -96,7 +96,7 @@
                         </a>
                 </li>
                 <li class="nav-item d-none d-lg-block">
-                    <a href="/user/rents" class="nav-link">
+                    <a href="#" class="nav-link">
                         <i class="fas fa-bell"></i>
                         <span class="badge badge-success"></span>
                     </a>
