Update icons, fix bug in deleteRent

--- a/views/pages/admin/rents.ejs
+++ b/views/pages/admin/rents.ejs
@@ -21,16 +21,16 @@ function getState(state){
             return '<i class="fas fa-warehouse"></i>Kiadásra vár'
             break
         case 2:
-            return '<i class="fas fa-long-arrow-alt-left"></i>Kiadásról értesítve'
+            return '<i class="fas fa-envelope"></i>Kiadásról értesítve'
             break
         case 3:
-            return '<i class="fas fa-long-arrow-alt-right"></i>Kiadva'
+            return '<i class="fas fa-long-arrow-alt-left"></i>Kiadva'
             break
         case 4:
             return '<i class="fas fa-archive"></i>Leadásra vár'
             break
         case 5:
-            return '<i class="fas fa-archive"></i>Leadásról értesítve'
+            return '<i class="fas fa-envelope"></i>Leadásról értesítve'
             break
         case 6:
             return '<i class="fas fa-archive"></i>Leadva'
