--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -63,7 +63,7 @@ function getState(state){
                                 </td>
                                
                                 <td>
-                                    <button type="button" class="btn btn-danger" onclick="returnRent(<%=i%>)" <%if(rents[i].state != 3){%>disabled<%}%>>
+                                    <button type="button" class="btn btn-secondary" onclick="returnRent(<%=i%>)" <%if(rents[i].state != 3){%>disabled<%}%>>
                                         <i class="fas fa-archive"></i>
                                     </button>
                                 </td>
