--- a/views/errors/not-authorized.ejs
+++ b/views/errors/not-authorized.ejs
@@ -8,6 +8,7 @@
                 </h4>
             </div>
             <form action="/auth/login" method="POST" class="form-inline">
+                <input type="hidden" name="referer" value="<%=url%>">
                 <button class="btn-lg btn-warning" type="submit">Panic button</button>
             </form>
         </main>
