--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,13 @@
     <link href="/css/main.css" rel="stylesheet" type="text/css">
     <title><%= (user && user.isAdmin && newRents) ? '('+newRents+') ' : '' %>SCH Szertár: Főoldal</title>
 </head>
-<body <% if(active[1] == 'about'){ %>style="padding: 0"<%}%>>
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="/">SCH Szertár</a>
+        <%# Small screen before dropdown %>
         <ul class="nav navbar-nav d-lg-none ml-auto mr-3" style="flex-direction: row">
-            <% if(user && active[1] != 'admin') { %>
+            <% if(user) { %>
+            <% if(active[1] != 'admin') { %>
             <li class="nav-item <% if(active[2] === 'cart'){ %> active <% } %>">
                 <a class="nav-link" href="/user/cart">
                     <i class="fas fa-shopping-cart"></i>
@@ -26,17 +28,11 @@
                         <span class="badge badge-warning inRent"><%= (!user.inRent) ? '' : user.inRent %></span>
                     </a>
             </li>
+            <% } %>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <i class="fas fa-bell"></i>
-                    <span class="badge badge-success"></span>
-                </a>
-            </li>
-            <% }else if(user && user.isAdmin){ %>
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/rents">
-                    <i class="fas fa-bell"></i>
-                    <span class="badge badge-success newRents"><%= (newRents) ? newRents : '' %></span>
+                    <i class="fas fa-bell js-push-btn"></i>
+                    <span class="badge badge-success"><%= (newRents && user.isAdmin) ? newRents : '' %></span>
                 </a>
             </li>
             <% } %>
@@ -45,7 +41,7 @@
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-    
+    <%# dropdown %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item <% if(!active[1]){ %> active <% } %>">
@@ -80,6 +76,7 @@
             </li>
             <% } %>
         </ul>
+        <%# Large screen %>
         <% if(user) { %>
             <ul class="nav navbar-nav ml-auto">
                 <% if(active[1] != 'admin') {%>
@@ -95,20 +92,13 @@
                             <span class="badge badge-warning inRent"><%= (!user.inRent) ? '' : user.inRent %></span>
                         </a>
                 </li>
+                <% } %>
                 <li class="nav-item d-none d-lg-block">
                     <a href="#" class="nav-link">
-                        <i class="fas fa-bell"></i>
-                        <span class="badge badge-success"></span>
+                        <i class="fas fa-bell js-push-btn"></i>
+                        <span class="badge badge-success"><%= (newRents && user.isAdmin) ? newRents : '' %></span>
                     </a>
                 </li>
-                <% }else if(user.isAdmin){%>
-                <li class="nav-item d-none d-lg-block">
-                    <a href="/admin/rents" class="nav-link">
-                        <i class="fas fa-bell"></i>
-                        <span class="badge badge-success newRents"><%= (newRents) ? newRents : '' %></span>
-                    </a>
-                </li>
-                <% } %>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
