Replace var with let and const

--- a/views/pages/admin/users.ejs
+++ b/views/pages/admin/users.ejs
@@ -6,7 +6,7 @@
             <h2>Felhasználók</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-striped">
-                    <caption>Felhasználók</caption>    
+                    <caption>Felhasználók</caption>
                     <thead>
                         <tr>
                             <th>Admin</th>
@@ -17,9 +17,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% for(var i=0; i < users.length; i++) { %>
-                        <tr id="user<%=i%>" data-id="<%=users[i]._id%>" <% if(users[i]._id.toString() == user._id.toString()){%>data-me='true'<%}%>>
-                            <td><i onclick="makeAdmin(<%=i%>)" style="cursor: pointer;" class="fas <%if(users[i].isAdmin) { %>fa-check text-success<% }else{ %>fa-times text-danger<% } %>"></i></td>
+                        <% for(let i=0; i < users.length; i++) { %>
+                        <tr id="user<%=i%>" data-id="<%=users[i]._id%>"
+                            <% if(users[i]._id.toString() == user._id.toString()){%>data-me='true' <%}%>>
+                            <td>
+                                <i onclick="makeAdmin(<%=i%>)" style="cursor: pointer;"
+                            class="fas <%if(users[i].isAdmin) { %>fa-check text-success<% }else{ %>fa-times text-danger<% } %>">
+                            </i>
+                            </td>
                             <td><%=users[i].name%></td>
                             <td><a href="mailto:<%=users[i].email%>"><%=users[i].email%></a></td>
                             <td><a href="tel:<%=users[i].phone%>"><%=users[i].phone%></a></td>
@@ -37,20 +42,20 @@
     </div>
 </div>
 <script>
-    function deleteUser(i){
-        var id = $("#user" + i).data("id");
-        var me = $("#user" + i).data("me")
-        if(me && !confirm('Törölnéd magad?')) return
+    function deleteUser(i) {
+        const id = $("#user" + i).data("id");
+        const me = $("#user" + i).data("me")
+        if (me && !confirm('Törölnéd magad?')) return
         $.ajax({
             url: './users/' + id,
             method: 'DELETE',
             success: () => location.reload()
         })
     }
-    function makeAdmin(i){
-        var id = $("#user" + i).data("id")
-        var me = $("#user" + i).data("me")
-        if(me && !confirm('Nem akarsz már admin lenni?')) return
+    function makeAdmin(i) {
+        const id = $("#user" + i).data("id")
+        const me = $("#user" + i).data("me")
+        if (me && !confirm('Nem akarsz már admin lenni?')) return
         $.ajax({
             url: './users/' + id,
             method: 'POST',
