--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1,23 +1,23 @@
 <% include ../partials/header %>
 <%
-function getItem(id){
+function getItem(id) {
     return items.find(function(item){
         return item._id.toString() === id.toString()
     })
 }
 
-function getUser(id){
-    return users.find(function(user){
+function getUser(id) {
+    return users.find(function(user) {
         return user._id.toString() === id.toString()
     })
 }
-var len = 0
-function getWeekRents(){
-    var res = [0,0,0,0,0,0,0]
-    weekRents.forEach(rent =>{
+
+function getWeekRents() {
+    const res = [0,0,0,0,0,0,0]
+    weekRents.forEach(rent => {
         res[new Date(rent.updatedAt).getDay()]++
     })
-    var tmp = res.shift()
+    const tmp = res.shift()
     res.push(tmp)
     return res
 }
@@ -26,11 +26,14 @@ function getWeekRents(){
     <div class="row">
         <% include ../partials/sidebar %>
         <main role="main" class="col-md-9 mr-sm-5 ml-sm-auto pl-sm-3">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <div
+                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1>Összegzés</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <label for="week">Hét: találat(<b><%= weekRents.rentsLen%></b>)</label>
-                    <input id="week" type="week" class="form-control" value="<%= (weekRents.week) ? weekRents.week : new Date().getFullYear()+'-W'+moment().week() %>" onchange="loadWeek()">
+                    <input id="week" type="week" class="form-control"
+                        value="<%= (weekRents.week) ? weekRents.week : new Date().getFullYear()+'-W'+moment().week() %>"
+                        onchange="loadWeek()">
                 </div>
             </div>
             <canvas class='my-4 w-100 chartjs-render-monitor' id="chart"></canvas>
@@ -61,7 +64,8 @@ function getWeekRents(){
                                 <% }) %>
                             </td>
                             <td> <%= getUser(rent.user).name %></td>
-                            <td><a href="mailto:<%= getUser(rent.user).email %>"><%= getUser(rent.user).email %></a></td>
+                            <td><a href="mailto:<%= getUser(rent.user).email %>"><%= getUser(rent.user).email %></a>
+                            </td>
                             <td><a href="tel:<%= getUser(rent.user).phone %>"><%= getUser(rent.user).phone %></a></td>
                         </tr>
                         <% }) %>
@@ -72,41 +76,43 @@ function getWeekRents(){
         </main>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js" integrity="sha256-CutOzxCRucUsn6C6TcEYsauvvYilEniTXldPa6/wu0k=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js" integrity="sha256-CfcERD4Ov4+lKbWbYqXD6aFM9M51gN4GUEtDhkWABMo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"
+    integrity="sha256-CutOzxCRucUsn6C6TcEYsauvvYilEniTXldPa6/wu0k=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"
+    integrity="sha256-CfcERD4Ov4+lKbWbYqXD6aFM9M51gN4GUEtDhkWABMo=" crossorigin="anonymous"></script>
 <script>
-var ctx = document.getElementById("chart");
-var chart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        datasets: [{
-            data: [<%= weekRents.days %>],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-        }],
-        labels: ['Hétfő', 'Kedd', 'Szerda', 'Csütörtök', 'Péntek', 'Szombat', 'Vasárnap']
-    },
-    options: {
-        legend: {
-            display: false
+    const ctx = document.getElementById("chart");
+    const chart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            datasets: [{
+                data: [<%= weekRents.days %>],
+                lineTension: 0,
+                backgroundColor: 'transparent',
+                borderColor: '#007bff',
+                borderWidth: 4,
+                pointBackgroundColor: '#007bff'
+            }],
+            labels: ['Hétfő', 'Kedd', 'Szerda', 'Csütörtök', 'Péntek', 'Szombat', 'Vasárnap']
         },
-        scales: {
-            yAxes: [{
-                ticks: {
-                    min: 0,
-                    beginAtZero: true,
-                    <% if(weekRents.rentsLen < 10){%>stepSize: 1<% } %>
-                }
-            }]
+        options: {
+            legend: {
+                display: false
+            },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        min: 0,
+                        beginAtZero: true,
+                        <% if(weekRents.rentsLen < 10){%> stepSize: 1 <% } %>
+                    }
+                }]
+            }
         }
+    })
+    function loadWeek() {
+        window.open('/admin/chart/' + $('#week').val(), '_self')
     }
-})
-function loadWeek(){
-    window.open('/admin/chart/'+$('#week').val(), '_self')
-}
 </script>
 
 <% include ../partials/footer %>
