--- a/views/pages/admin/items.ejs
+++ b/views/pages/admin/items.ejs
@@ -20,11 +20,13 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="db">Darabszám<span class="text-danger">*</span></label>
-                                <input type="number" min="0" name="count" id="db" placeholder="Darabszám" class="form-control" required>
+                                <input type="number" min="0" name="count" id="db" placeholder="Darabszám"
+                                    class="form-control" required>
                             </div>
                         </div>
                         <label for="img-btn" class="btn btn-primary btn-lg">
-                            <input type="file" id="img-btn" name="img" accept="image/*" capture hidden onchange="displayAsImage(this)">
+                            <input type="file" id="img-btn" name="img" accept="image/*" capture hidden
+                                onchange="displayAsImage(this)">
                             Kép feltöltése
                         </label>
                         <button type="submit" class="btn btn-dark">Küldés</button>
@@ -32,8 +34,10 @@
                     <figcaption class="figure-caption">Telefonnal fényképezés után feltölthető azonnal!</figcaption>
                 </figure>
                 <div id="img" style="display: none; width: 201px;">
-                <div class="card">
-                    <div id="thumb" class="card-img-top img-responsive" style="display: inline-block; width: 200px; height: 200px; background-position: center center; background-size: cover;"></div>
+                    <div class="card">
+                        <div id="thumb" class="card-img-top img-responsive"
+                            style="display: inline-block; width: 200px; height: 200px; background-position: center center; background-size: cover;">
+                        </div>
                         <div class="card-body">
                             <h3>Előnézet</h3>
                             <p class="description"> Darabszám: <span id='thumb-count'></span></p>
@@ -73,36 +77,38 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% for(var i=0; i < items.length; i++) { %>
-                                <tr>
-                                    <td><img class="item-image" src="<%= items[i].imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>"></td>
-                                    <td>
-                                        <span id="item<%=i%>" data-id="<%= items[i]._id %>" data-name="<%= items[i].name %>"
-                                            data-count="<%= items[i].count %>" data-stock="<%= items[i].stock %>">
-                                            <%= items[i].name %>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span id="count<%=i%>">
-                                            <%= items[i].count %>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span id="stock<%=i%>">
-                                            <%= items[i].stock %>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <button type="button" onclick="edit(<%=i%>)" class="btn btn-default">
-                                            <i class="fas fa-pencil-alt"></i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button type="button" class="btn btn-danger" onclick="deleteItem(<%=i%>)">
-                                            <i class="fas fa-trash-alt"></i>
-                                        </button>
-                                    </td>
-                                </tr>
+                            <% for(let i=0; i < items.length; i++) { %>
+                            <tr>
+                                <td><img class="item-image"
+                                        src="<%= items[i].imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>">
+                                </td>
+                                <td>
+                                    <span id="item<%=i%>" data-id="<%= items[i]._id %>" data-name="<%= items[i].name %>"
+                                        data-count="<%= items[i].count %>" data-stock="<%= items[i].stock %>">
+                                        <%= items[i].name %>
+                                    </span>
+                                </td>
+                                <td>
+                                    <span id="count<%=i%>">
+                                        <%= items[i].count %>
+                                    </span>
+                                </td>
+                                <td>
+                                    <span id="stock<%=i%>">
+                                        <%= items[i].stock %>
+                                    </span>
+                                </td>
+                                <td>
+                                    <button type="button" onclick="edit(<%=i%>)" class="btn btn-default">
+                                        <i class="fas fa-pencil-alt"></i>
+                                    </button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-danger" onclick="deleteItem(<%=i%>)">
+                                        <i class="fas fa-trash-alt"></i>
+                                    </button>
+                                </td>
+                            </tr>
                             <% } %>
                         </tbody>
                     </table>
@@ -140,22 +146,22 @@
 </div>
 <script>
     function deleteItem(i) {
-        var id = $("#item" + i).data("id");
+        const id = $("#item" + i).data("id");
         $.ajax({
             url: '/item/' + id,
             method: 'DELETE',
             success: () => {
-                if($('table tbody').children().length == 1) location.reload()
-                else $('#item'+i).parentsUntil("tbody")[1].remove()
+                if ($('table tbody').children().length == 1) location.reload()
+                else $('#item' + i).parentsUntil("tbody")[1].remove()
             }
         })
     }
 
     function edit(i) {
-        var id = $("#item" + i).data("id");
-        var name = $("#item" + i).data("name");
-        var count = parseInt($("#item" + i).data("count"));
-        var stock = parseInt($("#item" + i).data("stock"));
+        const id = $("#item" + i).data("id");
+        const name = $("#item" + i).data("name");
+        const count = parseInt($("#item" + i).data("count"));
+        const stock = parseInt($("#item" + i).data("stock"));
         $('#edit-overlay').show()
         $('input[id=id]').val(id);
         $('input[id=name]').val(name);
@@ -168,19 +174,19 @@
     }
 
     function displayAsImage(file) {
-        if(!file.files[0]) return $("#img").hide()
+        if (!file.files[0]) return $("#img").hide()
         $('#thumb-count').text($('#db').val())
         $('#thumb-stock').text($('#db').val())
-        var imgURL = URL.createObjectURL(file.files[0])
-        
-        var reader = new FileReader()
-        reader.onload = function (e) {
-            var dataURL = e.target.result,
-            c = document.querySelector('canvas'),
-            ctx = c.getContext('2d'),
-            img = new Image()
+        const imgURL = URL.createObjectURL(file.files[0])
 
-            img.onload = function() {
+        const reader = new FileReader()
+        reader.onload = function (e) {
+            const dataURL = e.target.result,
+                c = document.querySelector('canvas'),
+                ctx = c.getContext('2d'),
+                img = new Image()
+
+            img.onload = function () {
                 ctx.drawImage(img, 0, 0, 400, 400);
             }
             img.src = dataURL
@@ -188,9 +194,9 @@
         reader.readAsDataURL(file.files[0])
 
         //$('#thumb').ready(()=> URL.revokeObjectURL(imgURL))
-        $('#thumb').css('background-image', 'url('+imgURL+')')
+        $('#thumb').css('background-image', 'url(' + imgURL + ')')
         $("#img").show()
     }
-    
+
 </script>
 <% include ../../partials/footer %>
