--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -11,9 +11,9 @@ function getItem(id){
     <div class="row justify-content-center">
         <main role="main" class="col-md-10 px-2">
             <% if(!cart || !cart.items.length){ %>
-                <div class="alert alert-warning" role="alert">
-                    <h4 class="text-center">Nincs eszköz a kosaradban</h4>
-                </div>
+            <div class="alert alert-warning" role="alert">
+                <h4 class="text-center">Nincs eszköz a kosaradban</h4>
+            </div>
             <% } else { %>
             <h2>Kosár</h2>
             <form action="./cart/confirm" method="POST">
@@ -28,13 +28,17 @@ function getItem(id){
                             </tr>
                         </thead>
                         <tbody>
-                            <% for(var i=0; i< cart.items.length; i++) { %>
+                            <% for(let i=0; i< cart.items.length; i++) { %>
                             <tr id="rent<%=i%>" data-id="<%=cart.items[i]._id%>">
                                 <td>
                                     <%= getItem(cart.items[i]._id).name %>
-                                    <input name="<%= cart.items[i]._id%>" type="number" value="<%= cart.items[i].amount %>" min='1' max='<%=getItem(cart.items[i]._id).stock%>'>
+                                    <input name="<%= cart.items[i]._id%>" type="number"
+                                        value="<%= cart.items[i].amount %>" min='1'
+                                        max='<%=getItem(cart.items[i]._id).stock%>'>
                                 </td>
-                                <td><img class="item-image" src="<%= getItem(cart.items[i]._id).imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>"></td>
+                                <td><img class="item-image"
+                                        src="<%= getItem(cart.items[i]._id).imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>">
+                                </td>
                                 <td>
                                     <button type="button" class="btn btn-danger" onclick="deleteRentItem(<%=i%>)">
                                         <i class="fas fa-trash-alt"></i>
@@ -58,16 +62,16 @@ function getItem(id){
     </div>
 </div>
 <script>
-    function deleteRentItem(i){
-        var id = $("#rent" + i).data("id");
+    function deleteRentItem(i) {
+        const id = $("#rent" + i).data("id");
         $.ajax({
             url: './cart/item/' + id,
             method: 'DELETE',
             success: () => {
-                if($('table tbody').children().length == 1) location.reload()
+                if ($('table tbody').children().length == 1) location.reload()
                 else {
-                    $('.inCart').text(parseInt($('.inCart').html())-parseInt($('#rent'+i+' input').val()))
-                    $('#rent'+i)[0].remove() 
+                    $('.inCart').text(parseInt($('.inCart').html()) - parseInt($('#rent' + i + ' input').val()))
+                    $('#rent' + i)[0].remove()
                 }
             }
         })
