--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -36,9 +36,9 @@ function getState(state){
     <div class="row justify-content-center">
         <main role="main" class="col-md-10 px-2">
             <% if( !rents.length || rents.every((rent) => !rent.state) ){ %>
-                <div class="alert alert-warning" role="alert">
-                    <h4 class="text-center">Még nem kölcsönöztél eszközt</h4>
-                </div>
+            <div class="alert alert-warning" role="alert">
+                <h4 class="text-center">Még nem kölcsönöztél eszközt</h4>
+            </div>
             <% } else { %>
             <h2>Kölcsönzések</h2>
             <div class="table-responsive">
@@ -52,24 +52,25 @@ function getState(state){
                         </tr>
                     </thead>
                     <tbody>
-                        <% for(var i=0; i<rents.length; i++) { %>
-                            <% if(!rents[i].state) continue %>
-                            <tr>
-                                <td><span id="rent<%=i%>" data-id="<%=rents[i]._id%>"><%= getState(rents[i].state) %></span></td>
-                                <td>
-                                <% for(var j=0; j< rents[i].items.length; j++) { %>
-                                    <span style="display: block"><%= getItem(rents[i].items[j]._id).name %>(<b><%= rents[i].items[j].amount %></b>)</span>
+                        <% for(let i=0; i<rents.length; i++) { %>
+                        <% if(!rents[i].state) continue %>
+                        <tr>
+                            <td><span id="rent<%=i%>" data-id="<%=rents[i]._id%>"><%= getState(rents[i].state) %></span>
+                            </td>
+                            <td>
+                                <% for(let j=0; j< rents[i].items.length; j++) { %>
+                                <span
+                                    style="display: block"><%= getItem(rents[i].items[j]._id).name %>(<b><%= rents[i].items[j].amount %></b>)</span>
                                 <% } %>
-                                </td>
-                               
-                                <td>
-                                    <button type="button" class="btn btn-secondary" onclick="returnRent(<%=i%>)" <%if(rents[i].state != 3){%>disabled<%}%>>
+                            </td>
+
+                            <td>
+                                <button type="button" class="btn btn-secondary" onclick="returnRent(<%=i%>)" <%if(rents[i].state != 3){%>disabled<%}%>>
                                         <i class="fas fa-archive"></i>
                                     </button>
                                 </td>
                             </tr>
-                        <% } %>
-                    </tbody>
+                        <% } %> </tbody>
                 </table>
             </div>
             <% } %>
@@ -77,8 +78,8 @@ function getState(state){
     </div>
 </div>
 <script>
-    function returnRent(i){
-        var id = $("#rent" + i).data("id");
+    function returnRent(i) {
+        const id = $("#rent" + i).data("id");
         $.ajax({
             url: './rents/' + id,
             method: 'POST',
